# renderer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  camera.hpp  compile_commands.json  cubemap.h  cubemap.hpp  face.cpp  face.h  floating_camera.h  font.h  fps_camera.h  framebuffer.h  framebuffer.hpp  gbuffer.hpp  imgui.ini  index_buffer.h  index_buffer.hpp  input.hpp  light.h  light.hpp  main  main.cpp  matr.h  mesh.h  mesh.hpp  object.hpp  parseOBJ.cpp  parseOBJ.h  parseOBJ.hpp  renderer  shader.cpp  shader.h  suzanne_face.blend  suzanne_face.blend1  todo  vect.cpp  (+4 more)
include/: camera.hpp  cubemap.hpp  face.hpp  floating_camera.hpp  font.hpp  fps_camera.hpp  framebuffer.hpp  gbuffer.hpp  index_buffer.hpp  input.hpp  light.hpp  matr.hpp  mesh.hpp  object.hpp  renderUtils.hpp  shader.hpp  vect.hpp  vert.hpp  vertex_buffer.hpp
ressources/: 3D.mtl  animation.blend  animation.blend1  axis.blend  axis.blend1  axis.mod  blobs.blend  blobs.blend1  blobs.fbx  blobs.mod  blobs.mtl  box.blend  box.blend1  box.fbx  box.glb  box.mod  box.mtl  box.x3d  cube.mod  cube_floor.abc  cube_floor.fbx  cube_floor.usdc  fern.mod  lantern.blend  lantern.blend1  lantern.fbx  rings.fbx  rings.mod  spinning_rings2.fbx  sponza_scaled.mtl  spoon.mod  stage_beam.fbx  stage_beam.mod  suzanne.abc  suzanne.blend  suzanne.dae  suzanne.mod  teacup.mod  teapot.mod  triangle.mod
shaders/: basic.frag  basic.vert  deferred.frag  font.frag  font.vert  gBuffer.frag  gBuffer.vert  post.frag  post.frag.bak  post.vert.bak  sky.frag  sky.vert
src/: camera.cpp  cubemap.cpp  font.cpp  fps_camera.cpp  framebuffer.cpp  gbuffer.cpp  index_buffer.cpp  input.cpp  light.cpp  main.cpp  mesh.cpp  object.cpp  renderUtils.cpp  shader.cpp  vertex_buffer.cpp
tools/: CMakeLists.txt  Makefile  dna.txt  (+2 more)
(+1 files in other folders)
